core/static/css/v2/main.less
@import "layout/layout";



#header {
  position: relative;
  height: 80px;
  z-index: 3;

  .fixed-header-wrapper {
    position: fixed;
    left: 0px;
    top: 0px;
    right: 0px;
    height: 82px;
  }

  ul.header-social-icons {
    position: absolute;
    left: 125px;
    top: 14px;
    z-index: 9999;
    display: none;

    li {
     list-style-type: none;
     display: inline-block;
     vertical-align: middle;
     padding: 0px 5px;

     .fa {
       font-size: 18px;
     }

     &.link-light {
       display: none;
     }
   }
  }
}

#main_content > .container {
  margin-top: 40px;
  &.story-grid {
    margin-top: 0px;
  }
}

#mainnav .navbar-header {
  .header-title-wrapper {
    display: inline-block;
  }
}

.single-category, .author-detail, .archive-detail, .article-detail {
  .show-content-type {
    display: none;
  }
}

@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
  .nav-header-icon-title {
    padding-right: 0px;
  }
}
@media only screen and (max-width: 768px) {
  #header, #header .fixed-header-wrapper {
    height: 56px;

    .navbar-collapse {
      max-height: ~"calc(100vh - 55px)";
      overflow: auto;
    }

  }
  .album-list, .single-category, .Visible, .PhotoZone, .Little, .VideoZone, .AudioZone, .Tongues, .gallery-home,
  .face-list, .resource-list, .about-the-editor, .authors, .donate, .archive-detail, .location-detail {

    #header ul.header-social-icons {
      display: block;
      position: fixed;
      top: 20px;
    }

    .gallery-title-icon.share-icon, .gallery-title-icon.face-upload-share {
      display: none;
    }
  }

  .header-back-to-categories {
      display: none;
    }

  .single-category {
    #header ul.header-social-icons {
      top: 13px;
    }
    .header-back-to-categories {
      border-right: 1px solid @light-grey;
      display: block;
      letter-spacing: 1px;
      padding: 0 10px 0 0;
      line-height: 30px;
      .fa-angle-left {
        color: @link-primary;
        font-size: 12px !important;
      }
    }
  }
  .single-category, .Visible, .Little, .Tongues, .gallery-home, .about-the-editor, .authors, .donate, .archive-detail,
  .location-detail {
    #header ul.header-social-icons {
      left: 20px;
    }
  }

  .face-list {
    #header ul.header-social-icons li.link-light {
      display: inline-block;
    }
  }
}


.listing-image {
  width: 100%;
  max-width: 270px;
  height: 180px !important;
}

.full-image-center {
  position: relative;
  height: 100%;
  background: #000;

  img {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;

    width: auto !important;
    max-width: 100%;
    height: auto;
    max-height: 100%;
    display: block;
    vertical-align: middle;
  }
}

@media (max-width: 500px) {
  #holder {
    overflow: hidden;
  }
}

